Ajout commentaire + Correction pour compatibilite java < 11