@@ -1,5 +1,8 @@
 import java.util.*;
 import java.util.function.*;
+/**
+Classe contenant la fonction main du projet
+**/
 public class Main {
   public static void main(String[] args) {
     System.out.println("Bienvenue dans cette calculatrice");
@@ -11,8 +14,8 @@ public class Main {
     BiFunction<Integer,Integer,Integer> amoins = (a,b) -> a - b;
     BiFunction<Integer,Integer,Integer> afois = (a,b) -> a * b;
     BiFunction<Integer,Integer,Integer> adiv = (a,b) -> a / b;
-    REPL repl = new REPL(List.of(plus,moins,fois,div),
-    List.of(aplus,amoins,afois,adiv));
+    REPL repl = new REPL(Arrays.asList(plus,moins,fois,div),
+    Arrays.asList(aplus,amoins,afois,adiv));
     repl.boucle();
     System.out.println("Au revoir et a bientot");
   }
